# gitit

./: .urmzd.sr.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
skills/gitit/: SKILL.md
src/: error.rs  main.rs
src/ai/: claude.rs  copilot.rs  gemini.rs  mod.rs
src/cache/: fingerprint.rs  mod.rs  store.rs
src/commands/: cache.rs  commit.rs
src/git/: mod.rs
