[package]
name = "git-ai"
version = "0.0.0"
edition = "2024"
description = "AI-powered git commands for the lazy"
license = "Apache-2.0"

[[bin]]
name = "git-ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
crossterm = "0.28"
indicatif = "0.17"
async-trait = "0.1"
sha2 = "0.10"
dirs = "6"
